; ModuleID = '/home/carl/AnghaBench/git/t/helper/extr_test-ref-store.c_cmd_peel_ref.c'
source_filename = "/home/carl/AnghaBench/git/t/helper/extr_test-ref-store.c_cmd_peel_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_store = type { i32 }
%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"refname\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ref_store*, i8**)* @cmd_peel_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmd_peel_ref(%struct.ref_store* %0, i8** %1) #0 {
  %3 = alloca %struct.ref_store*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.object_id, align 4
  %7 = alloca i32, align 4
  store %struct.ref_store* %0, %struct.ref_store** %3, align 8
  store i8** %1, i8*** %4, align 8
  %8 = load i8**, i8*** %4, align 8
  %9 = getelementptr inbounds i8*, i8** %8, i32 1
  store i8** %9, i8*** %4, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = ptrtoint i8* %10 to i32
  %12 = call i8* @notnull(i32 %11, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i8* %12, i8** %5, align 8
  %13 = load %struct.ref_store*, %struct.ref_store** %3, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @refs_peel_ref(%struct.ref_store* %13, i8* %14, %struct.object_id* %6)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %2
  %19 = call i32 @oid_to_hex(%struct.object_id* %6)
  %20 = call i32 @puts(i32 %19)
  br label %21

21:                                               ; preds = %18, %2
  %22 = load i32, i32* %7, align 4
  ret i32 %22
}

declare dso_local i8* @notnull(i32, i8*) #1

declare dso_local i32 @refs_peel_ref(%struct.ref_store*, i8*, %struct.object_id*) #1

declare dso_local i32 @puts(i32) #1

declare dso_local i32 @oid_to_hex(%struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
